k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-next
  labels:
    app: portfolio-next
spec:
  selector:
    app: portfolio-next
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
